fix for header alignment
still a bit weird in FF, also gotta remove some more unnecessary lines
from earlier tweaks

--- a/assets/styles/components/_large-header.scss
+++ b/assets/styles/components/_large-header.scss
@@ -103,7 +103,7 @@
 
   @include media($medium) {
     display: flex;
-    height: 1.6rem;
+    height: $baseline;
     //padding: 0 0 $baseline/2 0;
     max-width: 100%;
     border-style: none;
@@ -124,8 +124,8 @@
 
 .header__nav-list-item {
   display: inline-block;
-  float: left;
   border-style: none;
+  //float: left;
   padding: 0;
   margin: 0;
   height: 100%;
@@ -134,7 +134,8 @@
   @include link-nav;
 
   a {
-    height:100%;
+    height:1.6rem;
+    line-height: 1.6rem;
     display: block;
   }
 }
