--- a/assets/styles/components/_search-form.scss
+++ b/assets/styles/components/_search-form.scss
@@ -3,6 +3,7 @@
   display: flex;
   align-items: flex-start;
   height: 1.6rem;
+  line-height: 1.6rem;
 }
 
 .search-form__label {
@@ -10,15 +11,15 @@
 
 .search-form__field {
   border: 0;
-  -webkit-appearance: none;
-  -moz-appearance: none;
+  //-webkit-appearance: none;
+  //-moz-appearance: none;
   //font-family: $font-family-sans-serif;
   //font-size: ms(-2);
   line-height: 1.6rem;
   //font-weight: bold;
   //color: $font-color;
   //text-transform: uppercase;
-  height: 100%;
+  height: 1.6rem;
   min-height: 100%;
   max-height: 100%;
   //box-sizing: content-box;
